Fix centering for wrapped text in prerequisites and spellcasting (#14581)

--- a/src/styles/item/_sidebar.scss
+++ b/src/styles/item/_sidebar.scss
@@ -29,6 +29,7 @@ section.sidebar {
             align-items: center;
             justify-content: center;
             width: 100%;
+            text-align: center;
         }
     }
 
